--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,5 +16,5 @@ jobs:
       with:
         server: ${{ secrets.ftp_host }}
         username: ${{ secrets.ftp_user }}
-        
         password: ${{ secrets.ftp_password }}
+        remote-path: sites.epcriacao.com.br/git/
