--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,4 +17,4 @@ jobs:
         server: ${{ secrets.ftp_host }}
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
-        remote-path: /home4/epcria38/sites.epcriacao.com.br/git/
+        server-dir: sites.epcriacao.com.br/git/
